changes on home check correct Base64ToText